fix double scroll on wrapper and zoomOutMenu

--- a/css/index.css
+++ b/css/index.css
@@ -222,6 +222,14 @@ html {
 }
 
 .wrapperZoomedOut {
+  overflow-x: visible !important;
+}
+
+.wrapperZoomedOut > #zoomOutMenu {
+  overflow: visible;
+}
+
+.wrapperZoomedOut {
   /*	transition-duration: 600ms !important;
   	width:10vw !important;
   	left: 1rem !important;
@@ -703,7 +711,6 @@ div#projects {
   padding-top: 30vh;
   /*width: 100%;*/
   width: 0;
-  overflow-y: scroll;
   /*background-color: coral;*/
   /*display: none;*/
 }
