--- a/sass/zoomOutMenu.scss
+++ b/sass/zoomOutMenu.scss
@@ -8,7 +8,7 @@
 	padding-top: 30vh;
 	/*width: 100%;*/
 	width: 0;
-	overflow-y: scroll;
+	//overflow-y: scroll;
 	/*background-color: coral;*/
 	/*display: none;*/
 }
